--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     // 画像の位置を取得
                     let imagePos = $(this).offset().top;
 
-                    // ウィンドウの高さとスクロール位置を主億
+                    // ウィンドウの高さとスクロール位置
                     let windowHeight = $(window).height();
                     let scrollPos = $(window).scrollTop();
 
